--- a/botn_savegame_manipulator/MainWindow.xaml
+++ b/botn_savegame_manipulator/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="BOTN SaveGame Manipulator" Height="625" Width="685">
     <StackPanel Margin="10">
         <TextBlock HorizontalAlignment="Right">           
-            <Hyperlink NavigateUri="https://github.com/RedoHeal/BotN_Cheats/releases" RequestNavigate="openInBrower">
+            <Hyperlink NavigateUri="https://fearlessrevolution.com/viewtopic.php?t=21039" RequestNavigate="openInBrower">
                 Click here for Cheat Tables
             </Hyperlink>
         </TextBlock>
